Fix for coco 1.0 to 2.0 link changes

--- a/app_todos.html
+++ b/app_todos.html
@@ -97,7 +97,7 @@
   &lt;header id=&quot;header&quot;&gt;
   ...
 &lt;/section&gt;
-</pre><p>Please look at the <a href="doc/classes/kb.html#injectViewModels-class">API Documentation</a> or the <a href="tutorial_inject.html">ViewModel Injection Tutorial</a> for more information and examples.</p>
+</pre><p>Please look at the <a href="doc/class/kb/Inject.html#injectViewModels-static">API Documentation</a> or the <a href="tutorial_inject.html">ViewModel Injection Tutorial</a> for more information and examples.</p>
 <h2 id="mvvm-in-todos-classic-">MVVM in &quot;Todos - Classic&quot;</h2>
 <p>The Classic application is an upgraded port of the Backbone Todos application so it has the same ORM with Todo (Backbone.Model) and TodoCollection (Backbone.Collection), but the application&#39;s Views are controlled by two ViewModels (AppViewModel and TodoViewModel).</p>
 <h3 id="models-backbone-model-backbone-collection-">Models (Backbone.Model + Backbone.Collection)</h3>
