--- a/test/issues/issue98/issue.html
+++ b/test/issues/issue98/issue.html
@@ -14,7 +14,7 @@
 <div id="errorPanel">
 </div>
 
-  <script src="../../../vendor/test/jquery-1.10.2.js"></script>
+  <script src="../../../vendor/test/jquery-1.11.1.min.js"></script>
   <script type="text/javascript" src="../../../vendor/knockout-3.1.0.js"></script>
   <script type="text/javascript" src="../../../vendor/underscore-1.6.0.js"></script>
   <script type="text/javascript" src="../../../vendor/backbone-1.1.2.js"></script>
