--- a/test/test-interactive.html
+++ b/test/test-interactive.html
@@ -4,23 +4,22 @@
   <head>
     <title>Knockback Interactive Tests</title>
     <!-- HELPERS -->
-    <script type="text/javascript" src="../../vendor/test/jquery-1.10.2.js"></script>
-    <script type="text/javascript" src="../../vendor/test/jquery.tmpl.js"></script>
+    <script type="text/javascript" src="../vendor/test/jquery-1.11.1.min.js"></script>
 
     <!-- LIBRARY DEPENDENCIES -->
-    <script type="text/javascript" src="../../vendor/knockout-1.2.1.js"></script>
-    <script type="text/javascript" src="../../vendor/underscore-1.1.7.js"></script>
-    <script type="text/javascript" src="../../vendor/backbone-0.5.1.js"></script>
-    <script type="text/javascript" src="../../vendor/optional/backbone-modelref-0.1.5.js"></script>
+    <script type="text/javascript" src="../vendor/knockout-3.1.0.js"></script>
+    <script type="text/javascript" src="../vendor/underscore-1.6.0.js"></script>
+    <script type="text/javascript" src="../vendor/backbone-1.1.2.js"></script>
+    <script type="text/javascript" src="../vendor/optional/backbone-modelref-0.1.5.js"></script>
 
     <!-- LIBRARY -->
-    <script type="text/javascript" src="../../knockback.js"></script>
+    <script type="text/javascript" src="../knockback.js"></script>
 
     <!-- HELPERS -->
-    <script type="text/javascript" src="../../test/_examples/build/_localization_examples.js"></script>
-    <script type="text/javascript" src="../../vendor/test/globalize/globalize.js"></script>
-    <script type="text/javascript" src="../../vendor/test/globalize/globalize.culture.en-GB.js"></script>
-    <script type="text/javascript" src="../../vendor/test/globalize/globalize.culture.fr-FR.js"></script>
+    <script type="text/javascript" src="../test/_examples/build/_localization_examples.js"></script>
+    <script type="text/javascript" src="../vendor/test/globalize/globalize.js"></script>
+    <script type="text/javascript" src="../vendor/test/globalize/globalize.culture.en-GB.js"></script>
+    <script type="text/javascript" src="../vendor/test/globalize/globalize.culture.fr-FR.js"></script>
 
     <!-- STYLING -->
     <style type="text/css">
