--- a/test_to_port/full-stack/test-bundle-lodash-core.html
+++ b/test_to_port/full-stack/test-bundle-lodash-core.html
@@ -10,7 +10,7 @@
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../../vendor/test/mocha/mocha-1.20.1.css" type="text/css" media="screen" />
-  <script type="text/javascript" src="../../vendor/test/jquery-1.10.2.js"></script>
+  <script type="text/javascript" src="../../vendor/test/jquery-1.11.1.min.js"></script>
   <script type="text/javascript" src="../../vendor/test/mocha/mocha-1.20.1.js"></script>
   <script type="text/javascript" src="../../vendor/test/mocha/chai-1.9.1.js"></script>
   <script type="text/javascript" src="../../vendor/test/mocha/mocha_test_runner.js"></script>
