--- a/test/issues/issue34/issue34.html
+++ b/test/issues/issue34/issue34.html
@@ -28,7 +28,7 @@
       <!-- /ko  -->
   </ul>
 
-  <script src="../../../vendor/test/jquery-1.10.2.js"></script>
+  <script src="../../../vendor/test/jquery-1.11.1.min.js"></script>
   <script src="../../../knockback-core-stack.js"></script>
   <script src="../../../vendor/optional/backbone-relational-0.8.8.js"></script>
   <script src="issue34.js"></script>
