--- a/test/issues/issue35/issue35.html
+++ b/test/issues/issue35/issue35.html
@@ -46,7 +46,7 @@
   <button data-bind='click: showBS'> Show BS</button>
   <button data-bind='click: changeInCode'>Change in Code</button>
 
-  <script src="../../../vendor/test/jquery-1.10.2.js"></script>
+  <script src="../../../vendor/test/jquery-1.11.1.min.js"></script>
   <script src="../../../knockback-core-stack.js"></script>
   <script src="../../../vendor/optional/backbone-relational-0.8.8.js"></script>
   <script src="issue35.js"></script>
