--- a/test/issues/issue37/issue37.html
+++ b/test/issues/issue37/issue37.html
@@ -25,7 +25,7 @@
       <code id="theJson"></code>
   </div>​
 
-  <script src="../../../vendor/test/jquery-1.10.2.js"></script>
+  <script src="../../../vendor/test/jquery-1.11.1.min.js"></script>
   <script src="../../../knockback-core-stack.js"></script>
   <script src="issue37.js"></script>
 
