Got Node tests running

--- a/test/test-interactive.html
+++ b/test/test-interactive.html
@@ -4,7 +4,7 @@
   <head>
     <title>Knockback Interactive Tests</title>
     <!-- HELPERS -->
-    <script type="text/javascript" src="../vendor/test/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="../vendor/optional/jquery-2.1.1.js"></script>
 
     <!-- LIBRARY DEPENDENCIES -->
     <script type="text/javascript" src="../vendor/knockout-3.1.0.js"></script>
