--- a/test/issues/issue44/issue44.html
+++ b/test/issues/issue44/issue44.html
@@ -16,7 +16,7 @@
   <button data-bind="click: countDown">Count down</button>
   <button data-bind="click: reset">Reset</button>
 
-  <script src="../../../vendor/test/jquery-1.11.1.min.js"></script>
+  <script src="../../../vendor/optional/jquery-2.1.1.js"></script>
   <script src="../../../knockback-core-stack.js"></script>
   <script src="issue44.js"></script>
 
