--- a/test/issues/issue89/issue89.html
+++ b/test/issues/issue89/issue89.html
@@ -14,7 +14,7 @@
 <div data-bind="text: title">
 </div>
 
-  <script src="../../../vendor/test/jquery-1.11.1.min.js"></script>
+  <script src="../../../vendor/optional/jquery-2.1.1.js"></script>
   <script src="../../../knockback-core-stack.js"></script>
   <script src="issue89.js"></script>
 
